Hacking of the JDK moved to a special class
- To limit the scope of these hacks and to be well prepared for future JDK
  changes
- Embedded does not use JPMS at this moment, so it still opens ALL_UNNAMED

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>